fix: pagination align

--- a/class-components/src/components/Pagination/pagination.module.css
+++ b/class-components/src/components/Pagination/pagination.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  align-self: center;
   gap:20px;
 }
 
